# Difference-Calculator

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: gendiff_check.yml  self-check.yml
gendiff/: __init__.py  format_checker.py  gendiff.py  generate_diff.py  get_diff.py  parser.py
gendiff/formaters/: json.py  plain.py  stylish.py
gendiff/scripts/: diff.py  gendiff.py  parser.py
gendiff/tests/: test_generate_diff.py  test_generate_diff_json.py  test_generate_diff_plain.py  test_generate_diff_stylish.py  test_generate_diff_yml.py
gendiff/tests/fixtures/: .test_result_stylish.txt.swp  file2.yml  test_result_json.txt
hexlet_code/scripts/: gendiff.py
