[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Mikhail Zherebtsov <bezrezen97@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]
repository = "https://github.com/BezrezenTLNH/python-project-50"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff"
