[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Mikhail Zherebtsov <bezrezen97@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]
repository = "https://github.com/BezrezenTLNH/python-project-50"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flake8 = "^5.0.4"
pytest-cov = "^4.1.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.diff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
